0.1.0-alpha.1:
==============
- Initial dump

0.1.0-alpha.2:
==============
- Made lexer case insensitive (YAM)
- Filenames ending with '/' are now accepted by tackon (YAM)

0.1.0-alpha.3:
==============
- (optional) quirks 'fixed' (YAM).
- (while) and (until) naked blocks allowed (YAM). 
- (exit (QUIET)) is now (always) totally silent.
- WB invocation fixed (project / tool / SCRIPT tooltype).
- Graphical parser feedback when invoked from WB.

0.1.0-alpha.4:
==============
- WB invocation fix fixed.

0.1.0-alpha.5:
==============
- Strict mode toggle (@strict 0/1) 
- (foreach) naked blocks allowed (FlexCat)

0.1.0-alpha.6:
==============
- (copylib) non strict mode (OpenURL) 
- Naked (welcome) (HWP_*)

0.1.0-alpha.7:
==============
- Single argument / multiple options permutations allowed (HWP_*)

0.1.0-alpha.8:
==============
- (exit) option permutations (MetalWeb)
- (prompt) and (help) non strict mode (MetalWeb).
- (getversion) non strict mode (MetalWeb).
- (run) non strict mode (MetalWeb).

0.1.0-alpha.9:
==============
- ?
