@@ -5,4 +5,5 @@
 - We have no (confirm) test coverage on (startup).
 - We need more @strict = 0 testing on (copylib).
 - We need (confirm) test feedback from (copyfiles).
+- amrss - when in expert mode you get garbage in one of the file lister.
 - (onerror) and (trap) should likely accept naked blocks just list (while), (until) and (foreach)
