@@ -28,15 +28,21 @@
 (copylib (source) (dest "dst")) ; "","Line 1: syntax error, unexpected ')' ')'",""
 (copylib (help "h") (prompt "p") (source "_ne_") (dest "_cl_")) ; "","Line 1: Not a file '_ne_' 0",""
 (copylib (help "h") (prompt "p") (source "_ne_") (dest "_cl_")) ; "","Line 1: Not a file '_ne_' 0",""
+(set @strict 0) (copylib (help "h") (prompt "p") (source "_ne_") (dest "_cl_")) ; "","0",""
+(set @strict 0) (copylib (help "h") (prompt "p") (source "_ne_") (dest "_cl_")) ; "","0",""
 (user 2) (copylib (confirm) (source "_ne_") (dest "_cl_")) ; "","Line 1: Missing option 'prompt' 0",""
 (user 2) (copylib (confirm) (prompt "p") (source "_ne_") (dest "_cl_")) ; "","Line 1: Missing option 'help' 0",""
 (copylib (help "h") (prompt "p") (source "_ne_") (dest "_cl_")) ; "","Line 1: Not a file '_ne_' 0",""
+(set @strict 0) (copylib (help "h") (prompt "p") (source "_ne_") (dest "_cl_")) ; "","0",""
 (copylib (help "h") (prompt "p") (source "_clf_") (dest "_cld_")) ; "rm -Rf _cld_ _clf_ && touch _clf_ _cld_","Line 1: Version string not found '_clf_' 0","rm -Rf _cld_ _cld_"
 (copylib (help "h") (prompt "p") (source "_clf_") (dest "_cld_")) ; "rm -Rf _cld_ _clf_ && cp ../test/data.copylib.i1.TheBar_2617_Aros_i386 _clf_ && touch _cld_","Line 1: Not a directory '_cld_' 0","rm -Rf _cld_ _cld_"
+(set @strict 0) (copylib (help "h") (prompt "p") (source "_clf_") (dest "_cld_")) ; "rm -Rf _cld_ _clf_ && cp ../test/data.copylib.i1.TheBar_2617_Aros_i386 _clf_ && touch _cld_","Line 1: Could not write to file '_cld_/_clf_' 0","rm -Rf _cld_ _cld_"
 (copylib (help "h") (prompt "p") (source "_clf_") (dest "_cld_")) ; "rm -Rf _cld_ _clf_ && mkdir _cld_","Line 1: Not a file '_clf_' 0","rm -Rf _cld_"
+(set @strict 0) (copylib (help "h") (prompt "p") (source "_clf_") (dest "_cld_")) ; "rm -Rf _cld_ _clf_ && mkdir _cld_","0","rm -Rf _cld_"
 (copylib (help "h") (prompt "p") (source "_clf_") (dest "_cld_")) ; "rm -Rf _cld_ _clf_ && cp ../test/data.copylib.i1.TheBar_2617_Aros_i386 _clf_ && mkdir _cld_","1","rm -Rf _clf_ _cld_"
 (copylib (help "h") (prompt "p") (source "../test/data.copylib.i1.TheBar_2617_Aros_i386") (dest "_cld_")) ; "rm -Rf _cld_ && mkdir _cld_","1","test -f _cld_/data.copylib.i1.TheBar_2617_Aros_i386 && rm -Rf _cld_"
 (copylib (help "h") (prompt "p") (source "../test/data.copylib.i1.TheBar_2617_Aros_i386") (dest "_cld_")) ; "rm -Rf _cld_ && mkdir _cld_ && mkdir _cld_/data.copylib.i1.TheBar_2617_Aros_i386","Line 1: Not a file '_cld_/data.copylib.i1.TheBar_2617_Aros_i386' 0","test -d _cld_/data.copylib.i1.TheBar_2617_Aros_i386 && rm -Rf _cld_"
+(set @strict 0) (copylib (help "h") (prompt "p") (source "../test/data.copylib.i1.TheBar_2617_Aros_i386") (dest "_cld_")) ; "rm -Rf _cld_ && mkdir _cld_ && mkdir _cld_/data.copylib.i1.TheBar_2617_Aros_i386","0","test -d _cld_/data.copylib.i1.TheBar_2617_Aros_i386 && rm -Rf _cld_"
 (copylib (help "h") (prompt "p") (source "../test/data.copylib.i1.TheBar_2617_Aros_i386") (dest "_cld_")) ; "rm -Rf _cld_","1","test -f _cld_/data.copylib.i1.TheBar_2617_Aros_i386 && rm -Rf _cld_"
 (copylib (help "h") (prompt "p") (source "../test/data.copylib.i1.TheBar_2617_Aros_i386") (dest "_cld_") (newname "nn")) ; "rm -Rf _cld_ && mkdir _cld_","1","test -f _cld_/nn && rm -Rf _cld_"
 (copylib (help "h") (prompt "p") (source "../test/data.copylib.i1.TheBar_2617_Aros_i386") (dest "_cld_") (newname "nn")) ; "rm -Rf _cld_","1","test -f _cld_/nn && rm -Rf _cld_"
