@@ -9,6 +9,8 @@
 (fileonly "dh0:dir/dir/file") ; "","file",""
 (fileonly "dh0:dir/dir/") ; "","Line 1: Not a file 'dh0:dir/dir/' 0",""
 (fileonly "dh0:") ; "","Line 1: Not a file 'dh0:' 0",""
+(set @strict 0) (fileonly "dh0:dir/dir/") ; "","",""
+(set @strict 0) (fileonly "dh0:") ; "","",""
 (fileonly "") ; "","Line 1: Not a file '' 0",""
 (fileonly) ; "","Line 1: syntax error, unexpected ')' ')'",""
 (fileonly "file" err) ; "","Line 1: syntax error, unexpected SYM, expecting ')' 'err'",""
